fix: cloud on mobile

--- a/src/components/sections/About/About.module.scss
+++ b/src/components/sections/About/About.module.scss
@@ -73,8 +73,10 @@
 .cloudLeft {
   height: 100%;
   left: 0;
+  object-fit: cover;
   position: absolute;
   top: 0;
+  width: auto;
 }
 
 .image {
